--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -99,17 +99,9 @@
 
 :root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(
-    120deg,
-    #848585 15%,
-    rgb(201, 0, 0) 
-  );
+  --vp-home-hero-name-background: rgb(201, 0, 0);
 
-  --vp-home-hero-image-background-image: linear-gradient(
-    -45deg,
-    #bd34fe 50%,
-    #47caff 50%
-  );
+  --vp-home-hero-image-background-image: rgb(201, 0, 0);
   --vp-home-hero-image-filter: blur(44px);
 }
 
