--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -122,10 +122,46 @@
  * -------------------------------------------------------------------------- */
 
 :root {
+  /*
   --vp-custom-block-tip-border: transparent;
   --vp-custom-block-tip-text: var(--vp-c-text-1);
   --vp-custom-block-tip-bg: var(--vp-c-brand-soft);
   --vp-custom-block-tip-code-bg: var(--vp-c-brand-soft);
+  */
+
+  --vp-custom-block-tip-border: transparent;
+  --vp-custom-block-tip-text: var(--vp-c-text-1);
+  --vp-custom-block-tip-bg: var(--vp-c-indigo-soft);
+  --vp-custom-block-tip-code-bg: var(--vp-c-indigo-soft);
+
+}
+
+/**
+ * Component: Badge
+ * -------------------------------------------------------------------------- */
+
+:root {
+  /*
+  --vp-badge-info-border: transparent;
+  --vp-badge-info-text: var(--vp-c-text-2);
+  --vp-badge-info-bg: var(--vp-c-default-soft);
+  */
+  --vp-badge-info-border: transparent;
+  --vp-badge-info-text: var(--vp-c-green-1);
+  --vp-badge-info-bg: var(--vp-c-green-soft);
+
+  --vp-badge-tip-border: transparent;
+  --vp-badge-tip-text: var(--vp-c-indigo-1);
+  --vp-badge-tip-bg: var(--vp-c-indigo-soft);
+
+  --vp-badge-warning-border: transparent;
+  --vp-badge-warning-text: var(--vp-c-warning-1);
+  --vp-badge-warning-bg: var(--vp-c-warning-soft);
+
+  --vp-badge-danger-border: transparent;
+  --vp-badge-danger-text: var(--vp-c-danger-1);
+  --vp-badge-danger-bg: var(--vp-c-danger-soft);
+
 }
 
 /**
